@@ -1,3 +1,11 @@
+2005-11-12  Bob Halley  <halley@dnspython.org>
+
+	* dns/name.py: Preliminary Unicode support has been added for
+	  domain names.  Running dns.name.from_text() on a Unicode string
+	  will now encode each label using the IDN ACE encoding.  The
+	  to_unicode() method may be used to convert a dns.name.Name with
+	  IDN ACE labels back into a Unicode string.
+
 2005-10-31  Bob Halley  <halley@dnspython.org>
 
 	* (Version 1.3.5 released)
